# ms_camera_model

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yapfignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.forgejo/workflows/: build_site.yaml
.github/workflows/: publish.yml
docs/source/: changelog.rst  conf.py  index.rst
docs/source/_static/: custom.css
filters_sensors/: generate_filters.py  generate_filters_custom.py  multispectral_sensor_mock.xlsx
lib/: dataclasses.py  errors.py  spectral_scripts.py
scripts/: script_calibration.py  script_main.py  test_calibration.py
src/: main.py  test_calibration.py  test_main.py
src/ms_camera_model/: __init__.py  data_comparison.py  errors.py  filter_sensor.py  image_data.py  image_registrator.py  image_visualiser.py  model.py
src/ms_camera_model/data_comparison/: __init__.py  data_comparison.py
src/ms_camera_model/errors/: __init__.py  errors.py
src/ms_camera_model/filter_sensor/: __init__.py  filter_sensor.py
src/ms_camera_model/image_data/: __init__.py  image_data.py  image_data_bkp.py
src/ms_camera_model/model/: __init__.py  model.py
src/ms_camera_model/operations/: interpolation.py
src/ms_camera_model/schemas/: enums.py  light.py
tests/: fail_mock_filter_sensor.xlsx  mock_filter_sensor.xlsx  test_model_integration.py  test_model_unit.py
tools/: image_registration.py  img_reg.py  img_reg_hs.py  img_reg_optical_flow.py  img_reg_phase_correlation.py  phase_corr.py  test.py
tools/lib/: errors.py  phase_corr_functions.py
