[project]
name = "ms_camera_model"
dynamic = ["version"]
description = "Multispectral Camera Model"
authors = [
    {name = "Tomas Vacek", email = "Tomas.Vacek4@vut.cz"},
]
dependencies = [
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
]
keywords = ["multispectral", "hyperspectral", "model"]

[project.urls]
"Homepage" = ""
"Repository" = ""
"Issues" = ""
"Changelog" = ""

[tool.ruff]
select = ["E", "F", "I", "B"] 
ignore = []

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.yapf]
based_on_style = "google"
column_limit = 120
