[build-system]
requires = ["uv_build >= 0.10.0, <0.11.0"]
build-backend = "uv_build"

[project]
name = "ms_camera_model"
version = "0.1.0"
description = "Multispectral Camera Simulation Model"
authors = [
    {name = "Tomas Vacek", email = "Tomas.Vacek4@vut.cz"},
]
dependencies = [
   "matplotlib>=3.10.8",
   "micasense-imageprocessing>=0.1.2",
   "numpy>=2.2.6",
   "opencv-python>=4.13.0.92",
   "pandas>=2.3.3",
   "spectral>=0.24",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
]
keywords = ["multispectral", "hyperspectral", "model"]

[project.urls]
"Homepage" = "https://github.com/vactomas/ms_camera_model"
"Repository" = "https://github.com/vactomas/ms_camera_model"
"Issues" = "https://github.com/vactomas/ms_camera_model/issues"
"Changelog" = "https://github.com/vactomas/ms_camera_model"

[tool.ruff]
select = ["E", "F", "I", "B"] 
ignore = []

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.yapf]
based_on_style = "google"
column_limit = 120
