[build-system]
requires = ["uv_build >= 0.10.0"]
build-backend = "uv_build"

[project]
name = "ms_camera_model"
version = "1.0.0"
description = "Multispectral Camera Simulation Model"
authors = [
    {name = "Tomas Vacek", email = "vacek.tomas@weaport.eu"},
]
dependencies = [
   "matplotlib>=3.10.8",
   "numpy>=2.2.6",
   "opencv-python>=4.13.0.92",
   "pandas>=2.3.3",
   "scikit-image>=0.25.2",
   "spectral>=0.24",
   "micasense-imageprocessing>=0.1.2",
   "openpyxl>=3.1.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
]
keywords = ["multispectral", "hyperspectral", "model"]

[project.urls]
"Homepage" = "https://github.com/vactomas/ms_camera_model"
"Repository" = "https://github.com/vactomas/ms_camera_model"
"Issues" = "https://github.com/vactomas/ms_camera_model/issues"
"Changelog" = "https://github.com/vactomas/ms_camera_model"

[tool.ruff]
select = ["E", "F", "I", "B"] 
ignore = []

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.yapf]
based_on_style = "google"
column_limit = 120

[dependency-groups]
dev = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.1.0",
]
